Fixed weird gap below avatar

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -19,16 +19,14 @@ main.list {
     background-color: mediumpurple;
     border-radius: 15px;
 
-    .avatar > img {
-      text-align: center;
-      display: inline-block;
-      cursor: pointer;
-      min-width: 128px;
-      min-height: 128px;
-      max-width: 128px;
-      max-height: 128px;
-      border: 4px solid white;
-      border-radius: 15px;
+    .avatar {
+      height: 136px;
+      width: 136px;
+
+      img {
+        border: 4px solid white;
+        border-radius: 15px;
+      }
     }
 
     .description {
